[package]
name = "news_agg"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"

[dev-dependencies]
insta = "1.26"
mockito = "0.31"

[lib]
name = "news_agg"
path = "src/lib.rs"